--- a/style/main.css
+++ b/style/main.css
@@ -16,3 +16,38 @@
   max-width: 1586px;
   margin: 0 auto;
 }
+
+
+/* Header start */
+
+/* Header end */
+
+
+
+/* Live streams start */
+
+/* Live streams end */
+
+
+/* Featured games start */
+
+/* Featured games end */
+
+
+
+/* Top events start */
+
+/* Top events end */
+
+
+
+/* Top free games start */
+
+/* Top free games end */
+
+
+
+/* Footer start */
+
+
+/* Footer end */
