--- a/style/main.css
+++ b/style/main.css
@@ -17,6 +17,14 @@
   margin: 0 auto;
 }
 
+.wrapper {
+    background-image: url(../images/bg-full-page.jpg);
+    max-width: 1728px;
+    height: 7244px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 /* Header start */
 
