Top Free Games end

--- a/style/main.css
+++ b/style/main.css
@@ -42,7 +42,73 @@
 
 
 /* Top free games start */
-  
+  .top-free-games {
+    padding: 100px 0 200px;
+    background-color: teal;
+  }
+  .free_header {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
+  .free_header_title {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 37px;
+    line-height: 45px;
+    color: rgba(235, 235, 235, 0.9);
+  }
+  .free_header img {
+    cursor: pointer;
+    display: inline-block;
+  }
+  .free_mainbox {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 40px;
+  }
+  .free_smallbox {
+    width: 30%;
+    display: flex;
+    gap: 35px;
+    align-items: center;
+  }
+  .free_smallbox_title {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: #FFFFFF;
+  }
+  .free_smallbox_text {
+    width: 273px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #A4A4A4;
+    margin: 10px 0;
+  }
+  .free_span_for_font {
+    color: white;
+    font-weight: bold;
+  }
+  .free_img {
+    display: inline-block;
+    cursor: pointer;
+  }
+  .free_starbox {
+    display: flex;
+    gap: 7px;
+    flex-wrap: wrap;
+  }
+
 /* Top free games end */
 
 
