--- a/style/main.css
+++ b/style/main.css
@@ -19,11 +19,12 @@
 
 .wrapper {
     background-image: url(../images/bg-full-page.jpg);
+    width: 1728px;
+    margin: 0 auto;
     height: 7244px;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 0 auto;
 }
 
 /* Header start */
