--- a/style/main.css
+++ b/style/main.css
@@ -650,7 +650,200 @@ cursor: pointer;
 /* Top events end */
 
 
+/* top-picks start */
+.top-picks {
+  padding: 50px 0;
+}
 
+.top-picks h1 {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 37px;
+  line-height: 45px;
+  color: rgba(235, 235, 235, 0.9);
+}
+
+.top-picks p {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 37px;
+  line-height: 160%;
+  color: #CDCDCD;
+  margin: 40px 0;
+}
+
+.top-picks .top-picks-cards {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.slider__item {
+  width: 696.43px;
+  height: 648.52px;
+  transition: all 0.3s ease;
+  -webkit-transition-timing-function:
+    cubic-bezier(0.4, 0.0, 0.2, 1);
+  transition-timing-function:
+    cubic-bezier(0.4, 0.0, 0.2, 1);
+}
+
+#slide-1:checked~.slider__holder .slider__item--1 {
+  position: relative;
+  z-index: 2;
+  transform: translate(0) scale(1);
+}
+
+#slide-2:checked~.slider__holder .slider__item--1 {
+  z-index: 1;
+  transform: translateX(-300px) scale(0.85);
+}
+
+#slide-3:checked~.slider__holder .slider__item--1 {
+  z-index: 0;
+  transform: translateX(-410px) scale(0.65);
+}
+
+#slide-4:checked~.slider__holder .slider__item--1 {
+  z-index: -1;
+  opacity: 0;
+  transform: translateX(-410px) scale(0.65);
+}
+
+#slide-5:checked~.slider__holder .slider__item--1 {
+  z-index: -1;
+  opacity: 0;
+  transform: translateX(-410px) scale(0.65);
+}
+
+#slide-1:checked~.slider__holder .slider__item--2 {
+  z-index: 1;
+  transform: translateX(300px) scale(0.85);
+}
+
+#slide-2:checked~.slider__holder .slider__item--2 {
+  position: relative;
+  z-index: 2;
+  transform: translate(0) scale(1);
+}
+
+#slide-3:checked~.slider__holder .slider__item--2 {
+  z-index: 1;
+  transform: translateX(-300px) scale(0.85);
+}
+
+#slide-4:checked~.slider__holder .slider__item--2 {
+  z-index: 0;
+  transform: translateX(-410px) scale(0.65);
+}
+
+#slide-5:checked~.slider__holder .slider__item--2 {
+  z-index: -1;
+  opacity: 0;
+  transform: translateX(-410px) scale(0.65);
+}
+
+#slide-1:checked~.slider__holder .slider__item--3 {
+  z-index: 0;
+  transform: translateX(410px) scale(0.65);
+}
+
+#slide-2:checked~.slider__holder .slider__item--3 {
+  z-index: 1;
+  transform: translateX(300px) scale(0.85);
+}
+
+#slide-3:checked~.slider__holder .slider__item--3 {
+  position: relative;
+  z-index: 2;
+  transform: translate(0) scale(1);
+}
+
+#slide-4:checked~.slider__holder .slider__item--3 {
+  z-index: 1;
+  transform: translateX(-300px) scale(0.85);
+}
+
+#slide-5:checked~.slider__holder .slider__item--3 {
+  z-index: 0;
+  transform: translateX(-410px) scale(0.65);
+}
+
+.picks-card {
+  position: relative;
+  display: block;
+  box-shadow: 0px 35px 40px -31px #000000;
+  border-radius: 25px;
+}
+
+.slider {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.slider__radio {
+  display: none;
+}
+
+.slider__holder {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  /* text-align: left; */
+}
+
+.slider__item {
+  width: 796.43px;
+  height: 648.52px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  overflow: hidden;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.slider__item-content {
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 120%;
+  padding: 450px 40px 0px 40px;
+}
+
+.slider__item-content h2 {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 37px;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.slider__item-content h3 {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #B5B5B5;
+  margin: 12px 0;
+}
+
+.slider__item-content h3 a {
+  color: white;
+  font-weight: 800;
+}
+.picks-card span{
+  color: #FFC700;;
+}
+
+/* top-picks end */
 /* Top free games start */
   .top-free-games {
     padding: 100px 0 200px;
